--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
   </ul>
 
   <hr/>
-  <p id="footer"><i>copy (&copy;) ds two thousand sixteen to two thousand twenty four</i></p>
+  <p id="footer"><i>copy (&copy;) ds twenty sixteen to twenty twenty four</i></p>
 </div>
 </body>
 </html>
